--- a/website/home.html
+++ b/website/home.html
@@ -20,7 +20,6 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: none;
             color: #ffffff;
             text-align: center;
         }
@@ -58,7 +57,7 @@
         }
 
         .content img {
-            width: 100px;
+            width: 85px;
             height: auto;
             margin-bottom: 1rem;
         }
@@ -105,7 +104,10 @@
     </div>
 
     <div class="content">
-        <img src="#" alt="Home">
+        <img src="https://quasarnet.github.io/Quasar/assets/images/icons/home.png" alt="Home">
+        
+        <br>
+        
         <h4>Home</h4>
         <p>Choose where You want to go!</p>
         <button class="button" onclick="redirectToInfo()">Info</button>
